Fix align bug

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -83,10 +83,8 @@ nav {
         padding-top: 50px;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-
         flex-flow: column wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
 
         .userCard {
